# encrpt

./: .gitignore  Cargo.toml  LICENSE  README.md  secret.txt
src/: crypto.rs  main.rs
