[package]
name = "encrpt"
version = "0.1.0"
edition = "2021"
description = "A simple, secure file encryption CLI tool using AES-256-GCM and Argon2id"
license = "MIT"
repository = ""
keywords = ["encryption", "aes-gcm", "argon2", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rpassword = "7"
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1